# octogen-dev

./: .gitignore  README.md  eslint.config.mjs  prek.toml
docs/: README.md
docs/adr/: README.md
docs/api/: README.md  catalog-partner-mcp.md  platform-catalog-api-v1.md
docs/guides/: README.md  catalog-partner-mcp.md
examples/python/: README.md  search_clothes.py
examples/typescript/: README.md  search_clothes.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/octogen_ai_sdk/: __init__.py  client.py  errors.py  models.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  models.ts
sdks/typescript/tests/: client.test.ts
skills/: README.md
skills/claude/: README.md
skills/codex/: README.md
skills/cursor/: README.md
tests/: README.md
tests/contract/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
