[project]
name = "octogen-ai-sdk"
version = "0.1.0"
description = "Async Python SDK for the Octogen AI commerce API"
readme = "README.md"
authors = [
    { name = "Octogen AI" }
]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.urls]
Homepage = "https://github.com/octogen-ai/octogen-dev"
Documentation = "https://api.octogen.ai/v1/docs"
Source = "https://github.com/octogen-ai/octogen-dev"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"
